[gd_scene load_steps=6 format=3 uid="uid://d3cjfs505l21f"]

[ext_resource type="Script" path="res://scenes/menus/chat_config.gd" id="1_2s64x"]
[ext_resource type="Shader" path="res://shaders/blur.gdshader" id="1_gciqx"]
[ext_resource type="PackedScene" uid="uid://blhxx346ycdg1" path="res://scenes/menus/chara_sheet.tscn" id="2_16ud8"]
[ext_resource type="PackedScene" uid="uid://bsc2r47v5rfwe" path="res://scenes/menus/participants_list.tscn" id="2_hsu6y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sivvc"]
shader = ExtResource("1_gciqx")

[node name="ChatConfigBlur" type="PanelContainer"]
material = SubResource("ShaderMaterial_sivvc")
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="ChatConfig" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
script = ExtResource("1_2s64x")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/ChatConfig"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ChatConfig/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Chats:"
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="NewChat" type="Button" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "New"

[node name="LoadChat" type="Button" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load"

[node name="Rename" type="Button" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rename"
flat = true

[node name="DeleteChat" type="Button" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"

[node name="ChatsList" type="ItemList" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="Scenario" type="TextEdit" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Scenario..."
wrap_mode = 1
scroll_fit_content_height = true

[node name="Label" type="Label" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Character gallery:"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharaList" type="ItemList" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true
max_columns = 50
same_column_width = true
fixed_column_width = 70
icon_mode = 0
fixed_icon_size = Vector2i(70, 100)

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/ChatConfig/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Participants:"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="AddParticipant" type="Button" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "  +  "

[node name="RemoveParticipant" type="Button" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "  -  "

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ParticipantsList" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/ScrollContainer" instance=ExtResource("2_hsu6y")]
unique_name_in_owner = true
layout_mode = 2

[node name="CharaSheet" parent="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2" instance=ExtResource("2_16ud8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer2/VBoxContainer/NewChat" to="PanelContainer/ChatConfig" method="_on_new_chat_pressed"]
[connection signal="pressed" from="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer2/VBoxContainer/LoadChat" to="PanelContainer/ChatConfig" method="_on_load_chat_pressed"]
[connection signal="pressed" from="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer2/VBoxContainer/DeleteChat" to="PanelContainer/ChatConfig" method="_on_delete_chat_pressed"]
[connection signal="item_activated" from="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer2/ChatsList" to="PanelContainer/ChatConfig" method="_on_chats_list_item_activated"]
[connection signal="item_selected" from="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer2/ChatsList" to="PanelContainer/ChatConfig" method="_on_chats_list_item_selected"]
[connection signal="text_changed" from="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer/Scenario" to="PanelContainer/ChatConfig" method="_on_scenario_text_changed"]
[connection signal="item_clicked" from="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/ScrollContainer/CharaList" to="PanelContainer/ChatConfig" method="_on_chara_list_item_clicked"]
[connection signal="pressed" from="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/AddParticipant" to="PanelContainer/ChatConfig" method="_on_add_participant_pressed"]
[connection signal="pressed" from="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/RemoveParticipant" to="PanelContainer/ChatConfig" method="_on_remove_participant_pressed"]
[connection signal="selected" from="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/ScrollContainer/ParticipantsList" to="PanelContainer/ChatConfig" method="_on_participants_list_selected"]
[connection signal="new_char" from="PanelContainer/ChatConfig/HBoxContainer/VBoxContainer2/CharaSheet" to="PanelContainer/ChatConfig" method="_on_chara_sheet_new_char"]
